# TDDFT-Dyson-orbitals

./: .gitignore  Dyson_tddft.py  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/gaussian_methanol/: MeOH_i.fchk  MeOH_i.in  MeOH_n.fchk  MeOH_n.in  MeOH_tddft_dyson.fchk  MeOH_tddft_dyson.molden  MeOH_tddft_dyson_report.txt
examples/orca_methanol/: MeOH_i.in  MeOH_i.molden.input  MeOH_i.out  MeOH_n.in  MeOH_n.molden.input  MeOH_n.out  MeOH_tddft_dyson.fchk  MeOH_tddft_dyson.molden  MeOH_tddft_dyson_report.txt
examples/qchem_eomip_reference/: MeOH_dyson_eomipccsd.in  MeOH_dyson_eomipccsd.in.fchk  MeOH_dyson_eomipccsd.out
examples/qchem_methanol/: MeOH_i.in  MeOH_i.in.fchk  MeOH_i.out  MeOH_n.in  MeOH_n.in.fchk  MeOH_n.out  MeOH_tddft_dyson.fchk  MeOH_tddft_dyson.molden  MeOH_tddft_dyson_report.txt
src/tddft_dyson/: __init__.py  cli.py  core.py
